Se agrega controlador para consumir via REST posts jsonplaceholder, se agrega documentacion swagger para dicho controlador
